<!DOCTYPE resources [
        <!ENTITY value_sys "SYS">
        <!ENTITY value_dia "DIA">
        <!ENTITY value_pulse "Puls">
        ]>

<resources>
    <string name="app_name">Blutdruck Statistik</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="report_name">BlutdruckStatistik_%1$s.pdf</string>
    <string name="csv_name">BlutdruckStatistik_%1$s.csv</string>
    <string name="json_name">BlutdruckStatistik_%1$s.json</string>
    <string name="report_title_line">"Blutdruck Statistik vom %1$s\t\t Seite %2$d"</string>

    <string name="input_toast_save_text">Speichere &value_sys; = %1$d, &value_dia; =%2$d, &value_pulse; = %3$d um %4$s</string>

    <string name="statistics_fragment_title">Blutdruck Statistik</string>
    <string name="statistics_spinner_label_text">Auswahl</string>
    <string name="statistics_header_time">Zeitraum</string>
    <string name="statistics_header_type_sys">&value_sys;</string>
    <string name="statistics_header_type_dia">&value_dia;</string>
    <string name="statistics_header_type_pulse">&value_pulse;</string>
    <string name="statistics_header_level_greater">&lt;%1$d</string>
    <string name="statistics_header_level_less">&gt;%1$d</string>
    <string name="statistics_list_week_id" formatted="false">KW %02d</string>

    <string-array name="statistic_spinner_choices">
        <item>SYS/DIA</item>
        <item>Systolisch</item>
        <item>Diastolisch</item>
        <item>Puls</item>
    </string-array>

    <string name="SYS">&value_sys;</string>
    <string name="DIA">&value_dia;</string>
    <string name="PULSE">&value_pulse;</string>
    <string name="ACK">Ja</string>
    <string name="NACK">Nein</string>
    <string name="stored_file">Datei %1$s wurde gespeichert</string>
    <string name="cannot_store_file">Datei %1$s konnte nicht gespeichert werden: %2$s</string>

    <!-- Strings related to Menus -->

    <string name="action_settings">Einstellungen</string>
    <string name="filter_settings">Filter</string>
    <string name="action_export_data">Speichern als…</string>
    <string name="action_import_json">Laden als…</string>
    <string name="action_data_format_csv">…CSV</string>
    <string name="action_data_format_json">…JSON</string>
    <string name="action_print_report">Drucke Report</string>
    <string name="action_export_output_format">Gewünschtes Dateiformat?</string>
    <string name="action_import_csv_invalid_header">Falsch formatierte Titelzeile, Import abgebrochen!</string>
    <string name="action_import_csv_invalid_data">Falsch formatierte Datenzeile (Nr %1$d), Import abgebrochen!</string>
    <string name="action_help">Hilfe</string>

    <!-- Strings related to EditData -->

    <string name="edit_data_date_time">Datum/Zeit</string>
    <string name="edit_data_comment">Kommentar</string>
    <string name="edit_data_date_picker_title">Neues Datum</string>
    <string name="edit_data_time_picker_title">Neue Zeit</string>
    <string name="edit_data_date_format" formatted="false">"%04d-%02d-%02d</string>
    <string name="edit_data_time_format" formatted="false">"%02d:%02d</string>
    <string name="edit_data_delete_confirmation">Soll der Datensatz wirklich gelöscht werden ?</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Einstellungen</string>
    <string name="settings_alarm_title">Sehr hoch</string>
    <string name="settings_warning_title">Hoch</string>
    <string name="settings_low_title">Niedrig</string>
    <string name="settings_sys_title">Systolische Level</string>
    <string name="settings_sys_alarm">sys_alarm</string>
    <string name="settings_sys_warning">sys_warning</string>
    <string name="settings_sys_low">sys_low</string>
    <string name="settings_dia_title">Diastolische Level</string>
    <string name="settings_dia_alarm">dia_alarm</string>
    <string name="settings_dia_warning">dia_warning</string>
    <string name="settings_dia_low">dia_low</string>
    <string name="settings_pulse_title">Puls Level</string>
    <string name="settings_pulse_alarm">pulse_alarm</string>
    <string name="settings_pulse_warning">pulse_warning</string>
    <string name="settings_pulse_low">pulse_low</string>

    <!-- Strings related to Filters -->

    <string name="filter_start_date">Startdatum</string>
    <string name="filter_end_date">Enddatum</string>
    <string name="filter_start_time">Startzeit</string>
    <string name="filter_end_time">Endzeit</string>
    <string name="filter_activate">Aktiv</string>
    <string name="filter_active_weekdays">Zeige alle Wochentage</string>
    <string name="filter_monday">Montag</string>
    <string name="filter_tuesday">Dienstag</string>
    <string name="filter_wednesday">Mittwoch</string>
    <string name="filter_thursday">Donnerstag</string>
    <string name="filter_friday">Freitag</string>
    <string name="filter_saturday">Samstag</string>
    <string name="filter_sunday">Sonntag</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="print_job_statistics">BlutdruckStatistikReport</string>
</resources>
