<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:id="@+id/set_sys"
            android:title="@string/settings_sys_title">

        <EditTextPreference
                android:id="@+id/set_sys_alarm"
                android:defaultValue="140"
                android:selectAllOnFocus="true"
                android:title="@string/settings_alarm_title"
                android:key="@string/settings_sys_alarm"
                tools:defaultValue="140"
                android:summary="140"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"
                android:singleLine="true"/>
        <EditTextPreference
                android:id="@+id/set_sys_warning"
                android:defaultValue="130"
                android:selectAllOnFocus="true"
                android:title="@string/settings_warning_title"
                android:key="@string/settings_sys_warning"
                tools:defaultValue="130"
                android:summary="130"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"
                android:singleLine="true"/>
        <EditTextPreference
                android:id="@+id/set_sys_normal"
                android:defaultValue="120"
                android:selectAllOnFocus="true"
                android:title="@string/settings_low_title"
                android:key="@string/settings_sys_low"
                tools:defaultValue="120"
                android:summary="120"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"
                android:singleLine="true"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:id="@+id/set_dia"
            android:title="@string/settings_dia_title">

        <EditTextPreference
                android:id="@+id/set_dia_alarm"
                android:defaultValue="100"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_alarm_title"
                android:key="@string/settings_dia_alarm"
                tools:defaultValue="100"
                android:summary="100"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"/>
        <EditTextPreference
                android:id="@+id/set_dia_warning"
                android:defaultValue="90"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_warning_title"
                android:key="@string/settings_dia_warning"
                tools:defaultValue="90"
                android:summary="90"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"/>
        <EditTextPreference
                android:id="@+id/set_dia_normal"
                android:defaultValue="80"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_low_title"
                android:key="@string/settings_dia_low"
                tools:defaultValue="80"
                android:summary="80"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:id="@+id/set_pulse"
            android:title="@string/settings_pulse_title">

        <EditTextPreference
                android:id="@+id/set_pulse_alarm"
                android:defaultValue="90"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_alarm_title"
                android:key="@string/settings_pulse_alarm"
                tools:defaultValue="90"
                android:summary="90"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"/>
        <EditTextPreference
                android:id="@+id/set_pulse_warning"
                android:defaultValue="70"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_warning_title"
                android:key="@string/settings_pulse_warning"
                tools:defaultValue="70"
                android:summary="70"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"/>
        <EditTextPreference
                android:id="@+id/set_pulse_normal"
                android:defaultValue="60"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_low_title"
                android:key="@string/settings_pulse_low"
                tools:defaultValue="60"
                android:summary="60"
                android:inputType="number"
                android:isScrollContainer="false"
                android:numeric="integer"/>
    </PreferenceCategory>
</PreferenceScreen>