<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_edit_data"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="de.dabbeljubee.blutdruckstatistik.EditDataActivity">

    <TextView
            android:text="@string/edit_data_date_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:id="@+id/edit_data_date_time"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/edit_data_comment_text"/>
    <EditText
            android:id="@+id/edit_data_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:layout_below="@+id/edit_data_date_time"
            android:ems="5" android:cursorVisible="false" android:textIsSelectable="false" android:focusable="false"
            android:focusableInTouchMode="false"/>
    <EditText
            android:id="@+id/edit_data_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:layout_below="@+id/edit_data_date_time"
            android:layout_toRightOf="@+id/edit_data_date"
            android:ems="5" android:cursorVisible="false" android:duplicateParentState="true"
            android:textIsSelectable="false" android:focusable="false" android:focusableInTouchMode="false"/>
    <GridLayout
            android:id="@+id/edit_data_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_data_date"
            android:useDefaultMargins="true"
            android:columnCount="3">
        <TextView
                android:id="@+id/edit_data_sys_text"
                android:text="@string/SYS"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAlignment="center"/>
        <TextView
                android:id="@+id/edit_data_dia_text"
                android:text="@string/DIA"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
        <TextView
                android:id="@+id/edit_data_pulse_text"
                android:text="@string/PULSE"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAlignment="center"/>
        <NumberPicker
                android:id="@+id/edit_data_sys_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
        <NumberPicker
                android:id="@+id/edit_data_dia_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
        <NumberPicker
                android:id="@+id/edit_data_pulse_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

    </GridLayout>
    <TextView
            android:id="@+id/edit_data_comment_text"
            android:text="@string/edit_data_comment"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/edit_data_grid"
            android:layout_marginRight="20dp"/>
    <EditText
            android:id="@+id/edit_data_comment_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@+id/edit_data_grid"
            android:layout_marginTop="25dp"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/edit_data_comment_text"/>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/edit_data_comment_editor"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">

    <ImageButton
            android:id="@+id/editDataButtonDelete"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:layout_weight="0.33"
            android:onClick="onButtonDelete"
            android:layout_alignTop="@+id/editDataButtonCancel"
            android:elevation="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <ImageButton
            android:id="@+id/editDataButtonCancel"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_weight="0.33"
            android:onClick="onButtonCancel"
            android:layout_centerHorizontal="true"
            android:elevation="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <ImageButton
            android:id="@+id/editDataButtonSave"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:layout_weight="0.33"
            android:onClick="onEditActivityButtonSave"
            android:elevation="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </TableRow>
</RelativeLayout>
